--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -3,5 +3,9 @@
     margin: 0;
     padding: 0;
 }
+body {
+    height:100vh; 
+
+}
 
 
