--- a/sass/components/droppoint.scss
+++ b/sass/components/droppoint.scss
@@ -13,7 +13,6 @@
     display: flex;
     justify-content: center;
     border: 1px solid black;
-    border-radius: 50%;
     position: relative;
     z-index: 100;
 }
@@ -50,7 +49,7 @@
         position: relative;
         z-index: 100;
         border: 1px solid black;
-        border-radius: 50%;
+        
         
       
         
