--- a/sass/components/gameboard.scss
+++ b/sass/components/gameboard.scss
@@ -14,8 +14,8 @@
     width: $mobileGameboardWidht;
     height: $mobileGameboardHeight;
     position: absolute;
-    top: 35%;
-    left: 5%;
+    top:  284.2px;
+    left: 18.75px;
     z-index: 10;
     border-radius: 15px;
     @include border-shadow;
@@ -27,8 +27,8 @@
     width: $mobileGameboardWidht;
     height: $mobileGameboardHeight;
     position: absolute;
-    top: 35%;
-    left: 5%;
+    top: 280.1px;
+    left: 18.75px;
     z-index: 20;
   }
 }
@@ -48,8 +48,8 @@
       width: $tabletGameboardWidht;
       height: $tabletGameboardHeight;
       position: absolute;
-      top: 31%;
-      left: 10%;
+      top: 317.44px;
+      left: 76.8px;
       z-index: 10;
       border-radius: 40px;
     }
@@ -60,8 +60,8 @@
       width: $tabletGameboardWidht;
       height: $tabletGameboardHeight;
       position: absolute;
-      top: 30%;
-      left: 10%;
+      top: 307.2px;
+      left: 76.8px;
       z-index: 20;
     }
   }
@@ -82,8 +82,8 @@
       width: $desktopGameboardWidht;
       height: $desktopGameboardHeight;
       position: absolute;
-      top: 21%;
-      left: 28%;
+      top: 189px;
+      left: 403.2px;
 
       @include border-shadow;
     }
@@ -94,8 +94,8 @@
       width: $desktopGameboardWidht;
       height: $desktopGameboardHeight;
       position: absolute;
-      top: 20%;
-      left: 28%;
+      top: 180px;
+      left: 403.2px;
       z-index: 20;
     }
   }
